--- a/wlan_adapters.yaml
+++ b/wlan_adapters.yaml
@@ -133,14 +133,14 @@ profiles:
     mcs: [0,1,2,3,4,5,6,7]
     max_mtu: 3993
     tx_power:
-      mcs0: [10, 10, 10, 10, 10]
-      mcs1: [10, 10, 10, 10, 10]
-      mcs2: [10, 10, 10, 10, 10]
-      mcs3: [10, 10, 10, 10, 10]
-      mcs4: [10, 10, 10, 10, 10]
-      mcs5: [10, 10, 10, 10, 10]
-      mcs6: [10, 10, 10, 10, 10]
-      mcs7: [10, 10, 10, 10, 10]
+      mcs0: [50,200,1400,2500,2900]
+      mcs1: [50,200,1400,2500,2750]
+      mcs2: [50,200,1500,2250,2500]
+      mcs3: [50,200,1600,2000,2250]
+      mcs4: [50,200,1750,1750,1900]
+      mcs5: [50,200,1750,1750,1900]
+      mcs6: [50,200,1500,1500,1900]
+      mcs7: [50,200,1250,1250,1900]
     pwr_mw:
       0: [1mW, 1mW, 1mW, 1mW, 1mW, 1mW, 1mW, 1mW]
       1: [25mW, 25mW, 25mW, 25mW, 25mW, 16mW, 13mW, 8mW]
